--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
     href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
     rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   	<link id="external-css" rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap" media="all">
 </head>
 
